(add new changes on top of this file)
08-10-26 Till Korten
	* updated manual
08-08-25 Till Korten  <webmaster@korten-rivat.de>
	* Bugfix: reverted to old manual template to avoid rendering problems.

08-08-25 Till Korten  <webmaster@korten-rivat.de>
	* Bugfix: caption text works now
	* renderMethods ul and div work now
	* Manual updated

08-08-24 Till Korten  <webmaster@korten-rivat.de>
	* New feature: Image effect as highlight effect
	* Added Manual
	* Code cleanup

08-08-21 Till Korten  <webmaster@korten-rivat.de>
	* Bugfix: now the HTML code is valid XHTML (validated by balidator.w3c.org)
	* Code cleanup: now contains XCLASS reference

08-08-07 Till Korten  <webmaster@korten-rivat.de>

	* Initial release