@@ -1,6 +1,10 @@
 (add new changes on top of this file)
+09-01-07 Till Korten
+	* updated manual
+
 08-10-26 Till Korten
 	* updated manual
+
 08-08-25 Till Korten  <webmaster@korten-rivat.de>
 	* Bugfix: reverted to old manual template to avoid rendering problems.
 
